# templates-marketplace

./: .gitignore  Makefile  manage.py  pyproject.toml  requirements.txt
data/: EnvVariables.py
templates_marketplace/: asgi.py  settings.py  urls.py  wsgi.py
utils/: Dotenv.py
