[project]
name = "templates-marketplace"
version = "0.1.0"
description = ""
authors = [
    {name = "Ca-tt",email = "damir96.lukyanenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)"
]

[tool.poetry]
package-mode=false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
